@@ -1055,6 +1055,12 @@ NEARDATA struct permonst mons[] = {
         SIZ(300, 300, MS_BUZZ, MZ_TINY), MR_POISON, MR_POISON,
         M1_FLY | M1_ANIMAL | M1_NOHANDS | M1_POIS, M2_HOSTILE,
         M3_INFRAVISIBLE, CLR_RED),
+    MON("mystic scarab", S_XAN, LVL(7, 18, -20, 0, 0), (G_GENO | 3),
+        A(ATTK(AT_BITE, AD_PHYS, 5, 4), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
+          NO_ATTK),
+        SIZ(400, 300, MS_BUZZ, MZ_LARGE), MR_POISON, MR_POISON,
+        M1_FLY | M1_ANIMAL | M1_NOHANDS | M1_POIS, M2_HOSTILE,
+        M3_INFRAVISIBLE, CLR_BLUE),
     /*
      * lights
      */
@@ -2282,7 +2288,7 @@ struct permonst _mons2[] = {
         M1_BREATHLESS | M1_MINDLESS | M1_HUMANOID,
         M2_UNDEAD | M2_STALK | M2_HOSTILE, M3_INFRAVISION, HI_DOMESTIC),
     MON("draugr", S_ZOMBIE, LVL(5, 6, 8, 0, -3),
-        (G_GENO | G_SGROUP | G_NOCORPSE | 1),
+        (G_GENO | G_SGROUP | G_NOCORPSE | 2),
         A(ATTK(AT_WEAP, AD_PHYS, 1, 8), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
         SIZ(WT_HUMAN, 200, MS_SILENT, MZ_HUMAN),
@@ -2450,6 +2456,20 @@ struct permonst _mons2[] = {
         M1_HUMANOID | M1_POIS | M1_REGEN | M1_OMNIVORE,
         M2_NOPOLY | M2_WERE | M2_HOSTILE | M2_HUMAN | M2_COLLECT,
         M3_INFRAVISIBLE, CLR_ORANGE),
+    MON("martial artist", S_HUMAN, LVL(6, 12, 5, 20, 0), (2),
+        A(ATTK(AT_CLAW, AD_DSRM, 1, 6), ATTK(AT_KICK, AD_PHYS, 1, 4),
+          ATTK(AT_KICK, AD_PHYS, 1, 4), NO_ATTK, NO_ATTK, NO_ATTK),
+        SIZ(WT_HUMAN, 400, MS_HUMANOID, MZ_HUMAN), 0, 0,
+        M1_HUMANOID | M1_OMNIVORE,
+        M2_NOPOLY | M2_HUMAN | M2_STRONG | M2_COLLECT, M3_INFRAVISIBLE,
+        CLR_YELLOW),
+    MON("martial master", S_HUMAN, LVL(9, 12, 2, 20, 0), (2),
+        A(ATTK(AT_CLAW, AD_DSRM, 1, 8), ATTK(AT_KICK, AD_STUN, 1, 8),
+          ATTK(AT_KICK, AD_PHYS, 1, 8), NO_ATTK, NO_ATTK, NO_ATTK),
+        SIZ(WT_HUMAN, 400, MS_HUMANOID, MZ_HUMAN), 0, 0,
+        M1_HUMANOID | M1_OMNIVORE,
+        M2_NOPOLY | M2_HUMAN | M2_STRONG | M2_COLLECT, M3_INFRAVISIBLE,
+        CLR_YELLOW),
     MON("elf", S_HUMAN, LVL(10, 12, 10, 2, -3), G_NOGEN, /* for corpses */
         A(ATTK(AT_WEAP, AD_PHYS, 1, 8), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
